# aws-iam-auditor

./: .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  ci.yml  iam_auditor.py  main.py  main.tf  pyproject.toml  requirements.txt  test_auditor.py
auditor/: __init__.py  iam_auditor.py  reporter.py
terraform/: main.tf
tests/: test_auditor.py
